--- a/面试题总结.md
+++ b/面试题总结.md
@@ -1,52 +1,80 @@
 ## 计算机网络
 
+### 美团
+
+#### 1、TCP为什么可靠-02
+
+#### 2、http报文组成，里面分别有什么-02
+
 ## 操作系统
+
+### 美团
+
+#### 1、进程调度算法有哪些，解释短作业优先的实现-02
+
+#### 2、线程切换和进程切换的区别-02
 
 ## Java基础
 
 ### 美团
 
-#### 1、对红黑树的了解？有什么特点
+#### 1、对红黑树的了解？有什么特点-01
 
-#### 2、HashMap的底层原理
+#### 2、HashMap的底层原理-01
+
+#### 3、HashMap的put过程，为什么不安全-02
+
+#### 4、Integer a和b赋值-128~217范围的数和这个范围之外的数，然后判断是否相等。-02
+
+#### 5、说一哈排序算法的实现、时间复杂度、稳定性-02
 
 ## 并发
 
 ### 美团
 
-#### 1、谈谈对Java内存模型的了解
+#### 1、谈谈对Java内存模型的了解-01
+
+#### 2、concurrentHashMap为什么安全-02
+
+#### 3、synchronized和lock的区别-02
+
+#### 4、volatile关键字-02
 
 ## JVM
 
 ### 美团
 
-#### 1、对G1垃圾收集器的算法细节的了解
+#### 1、对G1垃圾收集器的算法细节的了解-01
 
-#### 2、类加载过程
+#### 2、类加载过程-01
 
 ## MySQL
 
 ### 美团
 
-#### 1、说说MySQL的索引结构？为什么用B+树而不用哈希和B树？
+#### 1、说说MySQL的索引结构？为什么用B+树而不用哈希和B树？-01
 
-#### 2、InnoDB和MyISAM的索引结构的区别？
+#### 2、InnoDB和MyISAM的索引结构的区别？-01
 
-#### 3、InnoDB主键索引和联合索引结构上的区别？
+#### 3、InnoDB主键索引和联合索引结构上的区别？-01
 
-#### 4、InnoDB和MyISAM还有哪些区别？
+#### 4、InnoDB和MyISAM还有哪些区别？-01
 
-#### 5、分库分表
+#### 5、分库分表-01
+
+#### 6、MySQL的索引结构有哪些-02
+
+#### 7、hash索引和B+树索引的优缺点-02
 
 ## Redis
 
 ### 美团
 
-#### 1、redis用过吗？一般怎么使用redis？
+#### 1、redis用过吗？一般怎么使用redis？-01
 
-#### 2、redis的底层结构？为什么要使用Redis？
+#### 2、redis的底层结构？为什么要使用Redis？-01
 
-#### 3、了解Redis持久化吗
+#### 3、了解Redis持久化吗-01
 
 ## Spring
 
@@ -60,6 +88,8 @@
 
 ### 美团
 
-#### 1、合并有序数组
+#### 1、合并有序数组-01
 
-#### 2、删除链表的倒数第n个节点
+#### 2、删除链表的倒数第n个节点-01
+
+#### 3、给出一个数组，找出左边减去右边的最大值(不是绝对值)，要求时间复杂度为O(N)-02
