--- a/面试题总结答案.md
+++ b/面试题总结答案.md
@@ -1,6 +1,94 @@
 ## 计算机网络
 
+### 美团
+
+#### 1、TCP为什么可靠-02
+
+> * 1、应用数据被分割成TCP认为最适合发送的数据块。
+> * 2、TCP会给每个数据块编号，接收方对数据包进行排序，然后按序发送给应用层。
+> * 3、**检验和**：TCP将保持它首部和数据的检验和。目的是检验数据在发送的过程是否发生了变化，如果收到的检验和有差错，TCP就会丢弃这个报文段。
+> * 4、TCP的接收端会丢弃重复的数据。
+> * 5、超时重传：当TCP发送一个段后机会启动一个定时器，等待目的端发送确认收到的报文，如果不能及时收到，发送端就会重传。
+>
+> **ARQ协议**
+>
+> > * 1、定义：每次发送完一个分组就会停止发送，等待对方确认，收到确认后再次发送下一个分组。
+> > * 2、是数据链路层和运输层的错误纠正协议之一。
+> > * 3、使用确认和超时两个机制来实现可靠传输。
+> > * 4、主要包含停止等待ARQ协议和连续ARQ协议。
+> >
+> > **停止等待ARQ协议**
+> >
+> > * 1、每次发送完一个分组就会停止发送，等待对方发送确认，如果超时后对方还没有发送确认，就会重新发送，直到收到确认后才会发送下一个分组。
+> > * 2、如果接收方收到重复分组后，就会丢弃重复的分组，并且向发送方发送确认。--确认丢失
+> > * 3、缺点：信道利用率低，等待时间长。
+> >
+> > **连续ARQ协议**
+> >
+> > * 连续ARQ协议可以提高信道利用率，发送方维持一个发送窗口，凡是位于发送窗口内的分组可以连续发送出去，而不需要等待对方确认，接收方一般采用累积确认，对按序到达的最后一个分组发送确认，表示到这个分组为止的所有的分组都已经收到了。
+> > * 1、优点：信道利用率高，容易实现，即使确认丢失也不会重传。
+> > * 2、缺点：不能向发送方反映出接收方已经收到的所有分组的信息。并且如果中间的某个分组丢失了，就会执行Go-back-N算法，表示需要重传已经发送过的N个消息。
+>
+> **滑动窗口和流量控制**
+>
+> > * 1、TCP利用滑动窗口实现流量控制。流量控制是为了控制发送方的速率，保证接收方来得及接收，是对点对点通信量的控制。
+> >
+> > * 2、接收方的确认报文中的窗口字段可以控制发送方窗口的大小。
+>
+> **拥塞控制**
+>
+> > 为了进行拥塞控制，TCP发送方要维持一个拥塞窗口的状态变量。拥塞控制窗口的大小取决于网络的拥塞程度，并且动态变化。发送方要让自己的发送窗口取为拥塞窗口和接收方的接收窗口中较小的一个。
+> >
+> > **拥塞控制的四种算法**
+> >
+> > * 1、慢开始：由小到大主键增大拥塞窗口的数值，每经过一个传播轮次，cwnd加倍。
+> > * 2、拥塞避免：每经过一个RTT时间就把发送方的cwnd加1
+> > * 3、快重传
+> > * 4、快恢复
+
+#### 2、http报文组成，里面分别有什么-02
+
+**参考链接: [HTTP 报文的组成部分](http://laichuanfeng.com/reading/parts-of-http-message/)**
+
+> 由三个部分组成：对报文进行描述的起始行、包含属性的首部块、以及可选的、包含数据的主体部分。
+>
+> **起始行**
+>
+> > * 1、所有的http报文都以一个起始行作为开始。请求报文的起始行说明了要做一些什么。响应报文的起始行说明了发生什么。
+> >
+> > **内容**
+> >
+> > * 1、**请求行**：包含一个方法(描述了服务器应该执行的操作)和一个请求url(描述了要对哪个资源执行这个方法)，还包含了HTTP的版本。
+> > * 2、**响应行**：响应报文承载了状态信息和操作产生的所有结果数据，将其返回给客户端。包含了响应报文使用的 HTTP 版本，数字状态码，以及描述操作状态的原因短语
+> > * 3、**方法**：请求的起始行以方法作为开始，方法用来告知服务器要做些什么
+> > * 4、**状态码**：状态码则是用来告诉客户端发生了什么事情。状态码位于响应的起始行中。状态码是在每条响应报文的起始行中返回的。会返回一个数字状态和一个可读的文本状态。
+> > * 5、**原因短语**：原因短语是响应起始行的最后一个组件。它为状态码提供了文本形式的解释。
+> > * 6、**版本号**：版本号会以 HTTP/x.y 的形式出现在请求和响应报文的起始行中。为 HTTP 应用程序提供了一种将自己所遵循的协议版本告知对方的方式。
+>
+> **首部块**
+>
+> > HTTP首部字段向请求或者响应报文中添加一些附加信息。
+> >
+> > HTTP规范定义了以下几种首部字段：
+> >
+> > * 1、通用首部：既可以出现在请求报文中，也可以出现在响应报文中。
+> > * 2、请求首部：提供更多有关请求的信息。
+> > * 3、响应首部：提供更多有关响应的信息。
+> > * 4、实体首部：描述主体的长度和内容，或者资源本身。
+> > * 5、扩展首部：规范中没有定义的新首部。
+>
+> **实体的主体部分**
+>
+> > * 1、该部分是可选的实体主体部分，实体的主体是HTTP报文的负荷，即为http要传输的内容。
+> > * 2、http报文可以承载很多类型的数字内容，图片、视频、HTML文档等。
+
 ## 操作系统
+
+### 美团
+
+#### 1、进程调度算法有哪些，解释短作业优先的实现-02
+
+#### 2、线程切换和进程切换的区别-02
 
 ## Java基础
 
@@ -68,6 +156,12 @@
 >   * 2、HashMap可以插入键值为null的Entry
 >   * 3、HashMap的迭代器是fail-fast迭代器。
 >   * 4、HashMap不能保证随着时间的推移Map元素次序是不变的。
+
+#### 3、HashMap的put过程，为什么不安全-02
+
+#### 4、Integer a和b赋值-128~217范围的数和这个范围之外的数，然后判断是否相等。-02
+
+#### 5、说一哈排序算法的实现、时间复杂度、稳定性-02
 
 ## 并发
 
@@ -193,6 +287,12 @@
 >
 > * 1、在构造函数类对一个final域的写入，与随后把这个被构造对象的引用赋值给一个引用变量，这两个操作之间不能重排序。
 > * 2、初次读一个包含final域的对象的引用，与随后初次读这个final域，这两个操作之间不能进行重排序。
+
+#### 2、concurrentHashMap为什么安全-02
+
+#### 3、synchronized和lock的区别-02
+
+#### 4、volatile关键字-02
 
 ## JVM
 
@@ -563,6 +663,10 @@
 >
 > 将一个表的数据分到同一个数据库的多张表中，每个表只有这个表的部分数据，但是仅仅作为水平分库的一个补充优化。
 
+#### 6、MySQL的索引结构有哪些-02
+
+#### 7、hash索引和B+树索引的优缺点-02
+
 ## Redis
 
 ### 美团
@@ -699,11 +803,74 @@
 
 > * 1、RDB持久化既可以手动执行，也可以根据服务器配置选项定期执行，该功能将某个时间点的数据库状态保存到一个RDB文件中，并且将其保存到硬盘。
 >
-> **RDB的创建和导入**
+> **RDB的创建和载入**
 >
-> 
+> **创建**
+>
+> * 1、SAVE和BGSAVE命令都可以生成RDB文件。
+> * 2、SAVE命令会阻塞Redis服务器进程，直到RDB文件创建完成，在服务器进程阻塞期间，服务器不能处理任何其他请求。只用SAVE命令执行完毕后才会重新执行客户端发送的请求。
+> * 3、BESAVE命令会派生出一个子进程，然后由子进程负责创建RDB文件，服务器进程继续处理命令请求。
+>   * 1、在执行BGSAVE命令时，客户端发送的SAVE命令会被服务器拒绝，避免父进程和子进程同时调用rdbSave函数会产生竞争条件。
+>   * 2、在执行BGSAVE命令时，客户端发送的BGSAVE也会被服务器拒绝，避免两个BGSAVE命令也会产生竞争条件。
+>   * 3、BGREWRITEAOF命令和BGSAVE命令也不能同时执行；如果在BGSAVE命令执行时，BGREWRITEAOF命令会被延迟到BGSAVE命令执行完毕后才能执行；如果在BGREWRITEAOF命令执行时，BGSAVE命令则会被服务器拒绝。
+> * 4、创建RDB文件的实际工作是由rdb.c/rdbSave函数完成的。
+> * 5、用户可以通过save选项设置多个保存条件让服务器每隔一段时间自动执行一次BGSAVE命令。
+>
+> **载入**
+>
+> * 1、RDB文件的载入工作是在服务器启动时自动执行的，只要服务器在启动时检测到RDB文件存在，就会自动导入。
+> * 2、由于AOF持久化的更新频率比RDB要快，因此如果服务器开启了AOF持久化功能，那么服务器就会先加载AOF文件来还原数据库。
+> * 3、载入RDB文件是使用rdb.c/rdbLoad函数完成的。
+> * 4、服务器在载入RDB文件期间会一直处于阻塞状态，直到载入工作完成为止。
 
 **AOF持久化**
+
+> * 1、RDB持久化是通过保存数据库中的键值对来记录数据库状态不同的，而AOF持久化是通过保存Redis服务器所执行的写命令来记录数据库状态的。
+> * 2、被写入AOF文件的所有命令都是以Redis的命令请求格式保存下来的，而Redis的命令请求格式是纯文本格式的，可以直接打开。
+> * 3、服务器在启动时，可以通过载入和执行AOF文件中保存的命令来还原服务器关闭之前的数据库状态。
+>
+> **AOF持久化功能实现**
+>
+> > 主要包含三个步骤：命令追加、文件写入、文件同步
+>
+> * 1、命令追加：当服务器执行完一个写命令时，会以协议格式将被执行的写命令追加到服务器状态的aof_buf缓冲区的末尾。
+> * 2、文件的写入和同步：Redis的服务器进程就是一个事件循环，而循环中的文件事件负责接收客户端的命令请求以及向客户端发送命令回复，而时间事件则负责执行向serverCron函数这样需要定时运行的函数，而服务区在执行文件事件时可能会向aof_buf区追加一些写命令，而服务器每次结束一个事件循环都会执行一个flushAppendOnlyFile函数，考虑是否将aof_buf缓冲区的内容写入到AOF文件中。而flushAppendOnlyFile函数的行为则取决于服务器配置的appendfsync选项的值来决定，默认是everysec，对于效率和安全性来说，效率依次升高，安全性则依次降低。
+>   * 1、always：将缓冲区的所有内容写入并同步到AOF文件中。
+>   * 2、everysec：将缓冲区的内容写入到AOF文件中，如果上次同步缓冲区的内容的时间距离现在超过了一秒，那么就将缓冲区的所有内容同步到AOF文件中。
+>   * 3、no: 将AOF文件的内容写入到AOF文件中，但是何时同步由操作系统决定。
+>
+> **AOF文件的载入和数据还原**
+>
+> 服务器只要把AOF文件中的所有写命令重新执行一遍即可。
+>
+> Redis读取AOF文件来还原数据库的步骤：
+>
+> * 1、创建一个不带客户连接的伪客户端。
+> * 2、从AOF文件中分析并读取出一条命令。
+> * 3、在伪客户端执行被读出的命令。
+> * 4、重复2、3步骤直到AOF文件中的命令执行完毕。
+>
+> **AOF重写**
+>
+> 随着服务器的不断运行，AOF文件会越来越大，体积过大的AOF文件就会对Redis服务造成影响，数据还原需要的时间就越多。为了解决AOF文件体积膨胀的问题，Redis提供了AOF文件重写功能，保证不会有浪费空间的冗余命令。
+>
+> > **重写的实现**
+> >
+> > * 1、AOF文件重写和旧的AOF文件是无关的，重写是通过读取服务器当前的数据库状态来实现的。
+> >
+> > * 2、首先从数据库中读取键现在的值，然后使用一条命令去记录键值对，代替之前对该键值对的多条命令，考虑到客户端的缓冲区溢出问题，如果键值对的数量过大，就将其划分为多条命令，一般是以64个元素作为一次划分，以上就是AOF文件重写的实现原理。
+> > * 3、AOF文件重写是通过aof_write函数来生成的，只包含还原当前数据库状态所必须的命令。
+> >
+> > **AOF后台重写(BGWRITEAOF的实现原理)**
+> >
+> > * 1、aof_write函数会执行大量的写入操作，因此调用该函数线程就会被长时间的阻塞，而Redis服务器是单线程的，那么就会导致在AOF重写期间无法接受客户端的命令请求，因此Redis将AOF重写程序放到了子进程中执行。
+> > * 2、AOF后台重写的好处：这样不仅服务器进程可以继续处理客户端的命令请求，而且子进程还带有父进程的数据副本，可以在避免使用锁的情况下保证数据的安全性。
+> > * 3、Redis服务器使用AOF缓冲区来解决服务器进程在子进程执行AOF重写时继续执行客户端请求而产生的数据不一致问题，该缓冲区在服务器创建子进程之后开始使用，当服务器执行完一个写命令后，也会将这个写命令发送给AOF缓冲区和AOF重写缓冲区。
+> > * 4、当子进程完成了AOF后台重写后，就会给父进程发送一个信号，父进程接收到该信号后就会调用信号处理函数。
+> > * 5、信号处理函数先将AOF重写缓冲区的所有内容写入到新AOF文件中，然后将新的AOF文件进行改名，原子地覆盖现有的AOF文件，完成新旧AOF文件的替换。
+> > * 6、在以上的过程中，只有信号处理函数才会对服务器造成阻塞，从而保证对服务器性能影响降到最低。
+> >
+> > 
 
 ## Spring
 
@@ -798,3 +965,4 @@ class Solution {
 }
 ```
 
+#### 3、给出一个数组，找出左边减去右边的最大值(不是绝对值)，要求时间复杂度为O(N)-02
