--- a/面试题总结答案.md
+++ b/面试题总结答案.md
@@ -88,7 +88,24 @@
 
 #### 1、进程调度算法有哪些，解释短作业优先的实现-02
 
+**进程调度算法**
+
+> 1、**先到先服务(FCFS)算法**：从就绪队列中选择一个最先进入队列的进程并为其分配资源，使其立即执行，直到执行完毕或者因为发生了某事件而被阻塞，从而放弃占用CPU等待重新调度。
+>
+> 2、**短作业优先算法**：从就绪队列中选择一个估计运行时间最短的进程并为其分配资源，使其立即执行，直到执行完毕或者因发生某事件而被阻塞，从而放弃占用CPU等待重新调度。
+>
+> 3、**时间片轮转调度算法**：操作系统会为每个进程分配一个时间片，即为每个进程运行的时间，时间片一旦用完就会切换另一个进程。
+>
+> 4、**优先级调度算法**：操作系统会为每个进程划分一个优先级，首先执行优先级最高的进程，如果优先级一样，就按照FCFS算法的流程执行。优先级是根据进程的内存要求、估计运行时间以及所需资源数来划分的。
+>
+> 5、**多级反馈队列调度算法**：短作业算法可能会导致仅照顾了短进程而忽略了长进程。而多级反馈队列既能使优先级高的进程得到响应，也能保证短作业快速完成。是目前公认的较好的进程调度算法。Unix操作系统便是使用的这种调度算法。
+
 #### 2、线程切换和进程切换的区别-02
+
+> * 1、每个进程都有自己的虚拟地址空间，同一个进程中的线程共享进程的虚拟地址空间。
+> * 2、线程切换和进程切换最大区别就是进程切换会涉及到虚拟地址空间的转换，而线程切换是不需要虚拟地址空间转换的，而虚拟地址空间的转换是很慢的。
+> * 3、虚拟地址空间和物理内存之间的映射关系是通过页表来存储，因此虚拟地址空间转化到物理内存空间就需要查找页表，而页表的查找一般是很慢的，因此通常会使用cache来缓存常用的地址映射，加速页表的查找，我们一般将其称为TLB。
+> * 4、每个进程都有自己的虚拟地址空间，因此每个进程也就有自己的页表，进程切换就会涉及到页表的切换，而页表切换后就会导致TLB失效，cache命中率减低，表现出来的就是程序运行变慢，而同一个进程中的线程就不需要进行虚拟地址空间的转换，因此一般线程切换比进程切换要快。
 
 ## Java基础
 
